# innovativeproject-netwalk

./: .pre-commit-config.yaml  README.md  docker-compose.yml  justfile
.github/workflows/: android-release.yml
androidApp/: .editorconfig  .gitignore  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
androidApp/app/: build.gradle.kts
androidApp/app/src/main/: AndroidManifest.xml
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/: MainActivity.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/fetcher/: NetworkInfoFetcher.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/location/: LocationFetcher.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/network/: NetworkClient.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/settings/: SettingsRepository.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/ui/: NetworkInfoScreen.kt  NetworkViewModel.kt  SettingsScreen.kt
androidApp/app/src/main/res/values/: strings.xml  themes.xml
androidApp/gradle/: libs.versions.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  connector.proto  connector_pb2.py  connector_pb2_grpc.py  docker-compose.yml  justfile  pyproject.toml  schema.sql
backend/app/: analytics.py  config.py  database.py  main.py  models.py  routes.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_health.py
backend/tests/data/: example_payload.json
frontend/: .gitignore  justfile  package-lock.json  package.json
frontend/src/: App.js
src/: App.js
