[project]
name = "netwalk-backend"
version = "0.1.0"
description = "Backend for NetWalk project"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi>=0.135.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
